# weld-studio

./: .gitignore  Cargo.toml  README.md  config-overrides.js  crates.js  docker-compose.telemetry.yml  index.html  package-lock.json  package.json  settings.html  source-files.js  tsconfig.json
addr2line/: fn.demangle.html  fn.demangle_auto.html  struct.Context.html  struct.Frame.html  struct.FrameIter.html  struct.FunctionName.html  struct.Location.html  struct.LocationRangeIter.html
adler32/: all.html  fn.adler32.html  index.html  struct.RollingAdler32.html
ahash/: all.html  index.html  struct.AHasher.html  struct.RandomState.html
alloc_stdlib/: struct.AllocatedStackMemory.html
arrow/: all.html  index.html  sidebar-items.js
atk/: all.html  enum.CoordType.html  enum.Layer.html  enum.RelationType.html  enum.Role.html  enum.StateType.html  enum.TextAttribute.html  enum.TextBoundary.html  enum.TextClipType.html  enum.TextGranularity.html  enum.ValueType.html  index.html  sidebar-items.js  struct.Action.html  struct.Attribute.html  struct.Component.html  struct.Document.html  struct.EditableText.html  struct.GObjectAccessible.html  struct.Hyperlink.html  struct.HyperlinkImpl.html  struct.HyperlinkStateFlags.html  struct.Hypertext.html  struct.Image.html  struct.Misc.html  struct.NoOpObject.html  struct.NoOpObjectFactory.html  struct.Object.html  struct.ObjectFactory.html  struct.Plug.html  struct.Range.html  struct.Rectangle.html  struct.Registry.html  struct.Relation.html  struct.RelationSet.html  struct.Selection.html  struct.Socket.html  struct.StateSet.html  struct.StreamableContent.html  struct.Table.html  (+9 more)
atk_sys/: all.html  constant.ATK_HYPERLINK_IS_INLINE.html  constant.ATK_KEY_EVENT_LAST_DEFINED.html  constant.ATK_KEY_EVENT_PRESS.html  constant.ATK_KEY_EVENT_RELEASE.html  constant.ATK_LAYER_BACKGROUND.html  constant.ATK_LAYER_CANVAS.html  constant.ATK_LAYER_INVALID.html  constant.ATK_LAYER_MDI.html  constant.ATK_LAYER_OVERLAY.html  constant.ATK_LAYER_POPUP.html  constant.ATK_LAYER_WIDGET.html  constant.ATK_LAYER_WINDOW.html  constant.ATK_RELATION_CONTROLLED_BY.html  constant.ATK_RELATION_CONTROLLER_FOR.html  constant.ATK_RELATION_DESCRIBED_BY.html  constant.ATK_RELATION_DESCRIPTION_FOR.html  constant.ATK_RELATION_DETAILS.html  constant.ATK_RELATION_DETAILS_FOR.html  constant.ATK_RELATION_EMBEDDED_BY.html  constant.ATK_RELATION_EMBEDS.html  constant.ATK_RELATION_ERROR_FOR.html  constant.ATK_RELATION_ERROR_MESSAGE.html  constant.ATK_RELATION_FLOWS_FROM.html  constant.ATK_RELATION_FLOWS_TO.html  constant.ATK_RELATION_LABELLED_BY.html  constant.ATK_RELATION_LABEL_FOR.html  constant.ATK_RELATION_LAST_DEFINED.html  constant.ATK_RELATION_MEMBER_OF.html  constant.ATK_RELATION_NODE_CHILD_OF.html  constant.ATK_RELATION_NODE_PARENT_OF.html  (+621 more)
src-tauri/: Cargo.toml  build.rs  fetch_proc_blocks.js  tauri.conf.json
src-tauri/preload_proc_blocks/: accuracy.wasm  argmax.wasm  binary_classification.wasm  elastic_net.wasm  f1_score.wasm  linear_regression.wasm  logistic_regression.wasm  normalize.wasm  prediction_errors.wasm  stats.wasm  support_vector_classifier.wasm  train_test_split.wasm
src-tauri/preload_tables/: diabetes.csv  heart_disease.csv  liver_patients.csv  symptoms_based_diseases_prediction.csv
src-tauri/src/: app.rs  app_state.rs  compiler.rs  datasets.rs  errors.rs  legacy.rs  lib.rs  local_manifest.json  logging.rs  main.rs  manifest.json  sql.rs  white-list.json
src-tauri/src/compiler/: cache.rs  database.rs  mod.rs
src-tauri/src/runtime/: mod.rs
src-tauri/src/shared/: arrow.rs  errors.rs  mod.rs  package.rs  runtime.rs  tensors.rs
src-tauri/src/wapm/: get_packages_by_namespace.graphql  mod.rs
(+66984 files in other folders)
