[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dependencies]
anyhow = "1.0.57"
serde_json = "1.0"
serde = { version = "1.0.137", features = ["derive"] }
tauri = { version = "1.0.0-rc.9", features = ["api-all"] }
arrow = { version = "12.0.0", features = ["prettyprint"] }
change-case = "0.2.0"
tracing = { version = "0.1.34", features = ["attributes"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json", "time", "local-time"] }
tokio = { version = "1.18.0", features = ["rt-multi-thread"] }
hotg-rune-compiler = { git = "https://github.com/hotg-ai/rune", branch = "refactor/query-based-compiler", version = "0.11.3" }
reqwest = { version = "0.11.10", features = ["blocking"] }
strum = { version = "0.24.0", features = ["derive"] }
uriparse = "0.6.4"
salsa = "0.16.1"
queryst = "2.1.0"

[dependencies.duckdb]
version = "0.3.4"
features = ["bundled"]


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
